# sonusmix

./: .gitignore  AppImageBuilder.yml  Architecture.drawio  Cargo.toml  Makefile.toml  README.md  about.toml  build.rs  bun.lockb  default.nix  dev-env  flake.nix  org.sonusmix.Sonusmix.json  package-lock.json  package.json  shell-minimal.nix  shell.nix  tailwind.config.js
.woodpecker/: continuous-release.yaml  main-check-workflow.yaml  release.yaml
assets/: AppRun  about.hbs  appimagetool.nix  org.sonusmix.Sonusmix.desktop  render-icons.sh
common/: Cargo.toml
common/src/: device.rs  error.rs  lib.rs
communication/: Cargo.toml
communication/src/: client.rs  device.rs  error.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: controller.rs  device.rs  error.rs  events.rs  main.rs  store.rs
firedbg/: build.rs.firedbg.map
firedbg/src/: main.rs.firedbg.map
firedbg/src/components/: about.rs.firedbg.map  app.rs.firedbg.map  choose_endpoint_dialog.rs.firedbg.map  connect_endpoints.rs.firedbg.map  debug_view.rs.firedbg.map  endpoint.rs.firedbg.map  endpoint_list.rs.firedbg.map  group.rs.firedbg.map  mod.rs.firedbg.map
firedbg/src/pipewire_api/: identifier.rs.firedbg.map  mainloop.rs.firedbg.map  mod.rs.firedbg.map  object.rs.firedbg.map  pod.rs.firedbg.map  store.rs.firedbg.map
firedbg/src/state/: metadata.rs.firedbg.map  mod.rs.firedbg.map  persistence.rs.firedbg.map  reducer.rs.firedbg.map
frontend/: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  style-orig.css  style.scss
frontend-elm/: .gitignore  watch.sh
frontend-elm/public/: backend.js  index.html  tauri.js
frontend-elm/src/: Main.elm
frontend-elm/src-tauri/: tauri.conf.json
frontend-elm/src-tauri/src/: main.rs
frontend/src/: app.rs  components.rs  main.rs  theme.rs  utils.rs
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: application_container.rs  device.rs  device_container.rs  grid.rs  grid_layout.rs  hardware_container.rs  mod.rs  panes.rs  sink.rs  source.rs  split_panes.rs  toggle_button.rs  virtual_container.rs
src/: app.html  graph_events.rs  main.rs  state.rs  state2.rs  tray.rs  volume.rs
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/pipewire_api/: error.rs  mainloop.rs  mod.rs  object.rs  pod.rs  store.rs  tree.rs
src/components/: about.rs  app.css  app.rs  choose_endpoint_dialog.rs  choose_node_dialog.rs  connect_endpoints.rs  connect_nodes.rs  debug_view.rs  endpoint.rs  endpoint_list.rs  group.rs  mod.rs  node.rs  settings_page.rs
src/lib/: Node.svelte  NodeList.svelte  backend.js  backendTypes.ts  index.js
src/pipewire_api/: actions.rs  identifier.rs  mainloop.rs  mod.rs  object.rs  pod.rs  store.rs
src/routes/: +page.svelte
src/state/: metadata.rs  mod.rs  persistence.rs  reducer.rs  settings.rs
src/state2/: mod.rs  reducer.rs
