[package]
name = "sonusmix"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
colog = "1.3.0"
derivative = "2.2.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
fuzzy-matcher = "0.3.7"
indexmap = { version = "2.6.0", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.22"
oneshot = "0.1.8"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", version = "0.8.0" }
relm4 = "0.9.0"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
slotmap = { version = "1.0.7", features = ["serde"] }
tempfile = "3.12.0"
thiserror = "1.0.63"
# Specify any 1.* version so we can ship the same version as relm4 already does
tokio = { version = "1", features = ["macros", "time"] }
ulid = { version = "1.1.3", features = ["serde"] }
