[package]
name = "sonusmix"
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
colog = "1.3.0"
derivative = "2.2.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
fuzzy-matcher = "0.3.7"
indexmap = { version = "2.7.1", features = ["serde"] }
itertools = "0.14.0"
ksni = "0.2.2"
log = "0.4.25"
oneshot = "0.1.8"
paste = "1.0.15"
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git", version = "0.8.0" }
relm4 = "0.9.1"
ron = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
slotmap = { version = "1.0.7", features = ["serde"] }
tempfile = "3.16.0"
thiserror = "2.0.11"
# Specify any 1.* version so we can ship the same version as relm4 already does
tokio = { version = "1", features = ["macros", "time"] }
ulid = { version = "1.1.4", features = ["serde"] }

[dependencies.gtk]
package = "gtk4"
version = "0.9"
features = ["v4_10"]
