[package]
name = "pulsemeeter-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipewire = { git = "https://gitlab.freedesktop.org/pipewire/pipewire-rs.git" }
thiserror = "1.0"
once_cell = "1.17"
