[package]
name = "pulsemeeter-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
pipewire = "0.6.0"
log = "0.4"
simple_logger = { version = "4.0.0", features = ["stderr"] }
thiserror = "1.0"
once_cell = "1.17"
