[package]
name = "pulsemeeter-frontend-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde-wasm-bindgen = "0.4.3"
js-sys = "0.3.59"
serde = { version = "1.0.140", features = ["derive"] }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
yew = { version="0.20.0", features = ["csr"] }
yewprint = "0.4.2"
stylist = { version = "0.11", features = ["yew_integration"] }
csscolorparser = "0.6.2"
log = "0.4"
wasm-logger = "0.2.0"
gloo = "0.8.0"
implicit-clone = "0.3.5"

[build-dependencies]
yewprint-css = "0.4.0"
grass = "0.12.2"
ureq = "2.6"
tar = "0.4"
flate2 = "1.0"
walkdir = "2"
urlencoding = "2.1"
sass-rs = "0.2.2"

#[workspace]
#members = ["src-tauri"]
