[package]
name = "sonusmix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sonusmix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["config-toml"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
pipewire = "0.8.0"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros"] }
tauri-plugin-log = "2.0.0-rc.0"
log = "0.4.22"
anyhow = { version = "1.0.86", features = ["backtrace"] }
oneshot = "0.1.8"
slotmap = { version = "1.0.7", features = ["serde"] }
